--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,12 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
 	<title>Untitled</title>
+    
+     <!-- copy this-->
+<meta name="format-detection" content="telephone-no">
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
+<!-- end copy -->
+
     <script type="text/javascript" charset="utf-8" src="js/buzz.js"></script>
 <!--Adobe Edge Runtime-->
     <script type="text/javascript" charset="utf-8" src="js/index_edgePreload.js"></script>
