--- a/www/index.html
+++ b/www/index.html
@@ -3,16 +3,15 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-	<title>Untitled</title>
+	<title>The Chinese Zodiac Story</title>
     
      <!-- copy this-->
 <meta name="format-detection" content="telephone-no">
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
 <!-- end copy -->
-
-    <script type="text/javascript" charset="utf-8" src="js/buzz.js"></script>
+    <script type="text/javascript" charset="utf-8" src="buzz.js"></script>
 <!--Adobe Edge Runtime-->
-    <script type="text/javascript" charset="utf-8" src="js/index_edgePreload.js"></script>
+    <script type="text/javascript" charset="utf-8" src="index_edgePreload.js"></script>
     <style>
         .edgeLoad-EDGE-56815088 { visibility:hidden; }
     </style>
